# moos-ivp-pearl

./: .~lock.estimate_error.csv#  NAV_HEADING_from_charles_mapRRT_nolead.csv  estimate_error.csv  estimate_error_0.5.csv  estimate_error_AIS10_spd0.5_CRinf_noise0.5_0.2_6.csv  estimate_error_AIS10_spd2_CR20_noise0.5_0.2_6.csv  estimate_error_AIS30_spd0.5_CR100_noise0.5_0.2_6.csv  estimate_error_AIS30_spd0.5_CR12_noise0.5_0.2_6.csv  estimate_error_AIS30_spd0.5_CR12_noise0.5_0.2_6.ods  estimate_error_AIS30_spd0.5_CR20_noise0.5_0.2_6.csv  estimate_error_AIS30_spd0.5_CR50_noise0.5_0.2_6.csv  estimate_error_AIS30_spd0.5_CRinf_noise0.5_0.2_6.csv  estimate_error_AIS30_spd1_CR100_noise0.5_0.2_6.csv  estimate_error_AIS30_spd1_CR12_noise0.5_0.2_6.csv  estimate_error_AIS30_spd1_CR20_noise0.5_0.2_6.csv  estimate_error_AIS30_spd1_CR50_noise0.5_0.2_6.csv  estimate_error_AIS30_spd1_CRinf_noise0.5_0.2_6.csv  estimate_error_AIS30_spd2_CR12_noise0.5_0.2_6.csv  estimate_error_AIS30_spd2_CR20_noise0.5_0.2_6.csv  estimate_error_no_noise.csv  estimate_error_sigma0.5.csv
missions/auv_dock/: launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv
missions/pearl_heron/: launch.sh  launch_heron.sh  launch_pearl.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_uSimMarineV22.moos  (+2 more)
src/: CMakeLists.txt
src/pAUVdock/: AUVdock.cpp  AUVdock.h  AUVdock_Info.cpp  AUVdock_Info.h  CMakeLists.txt  main.cpp  pAUVdock.moos
src/pTargetCPA/: CMakeLists.txt  TargetCPA.cpp  TargetCPA.h  TargetCPA_Info.cpp  TargetCPA_Info.h  main.cpp  pTargetCPA.moos
(+1272 files in other folders)
